--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
           </button>
         </div>
       </section>
-      <section class="clr-b">
+      <footer class="clr-b">
         <div class="w90 mx-auto flex pt-10 lg:flex-row flex-col-reverse">
           <div class="flex mt-10 lg:flex-col lg:justify-between flex-col-reverse">
             <img src="images/logo1.svg" class="logo1 mx-auto" alt="logo" />
@@ -255,6 +255,7 @@
               id="search"
               placeholder="Updates in your inbox..."
               class="inline-block input rounded-full"
+              aria-label="search"
             />
             <button
               class="text-center button inline-block but clr-w shd bt-clr z-12 lg:ml-4 relative rounded-full"
@@ -266,7 +267,7 @@
         <p class="text-center  clr-g mt-10 pb-8">
           Copyright 2020. All Rights Reserved
         </p>
-      </section>
+      </footer>
     </main>
 
     <script src="js/app.js"></script>
